k8s-manifest/ingress/ingress.yaml
---


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-voting-app
  annotations:
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: anshuhtwt.vote-app.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: voting-service
                port:
                  number: 80
    - host: anshuhtwt.result-app.com
      http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: result-service
                  port:
                    number: 80
